fix competition mobile layout

--- a/src/pages/competitions/competition-card/index.scss
+++ b/src/pages/competitions/competition-card/index.scss
@@ -344,11 +344,12 @@
 
 @media screen and (max-width:720px) and (max-height: 1300px ){
     .competition-card-container{
-        width: 230px;
+        margin: 10px;
+        width: 210px;
     }
     .competition-card {
-        width: 230px;
-        height: 230px;
+        width: 210px;
+        height: 210px;
         .icon {
             padding: 1rem;
             margin: 1rem;
@@ -373,11 +374,12 @@
 
 @media screen and (max-width:480px){
     .competition-card-container{
-        width: 180px;
+        width: 170px;
+        margin: 10px;
     }
 	.competition-card {
-        width: 180px;
-        height: 180px;
+        width: 170px;
+        height: 170px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -408,15 +410,16 @@
 
 @media screen and (max-width:400px){
     .competition-card-container{
-        width: 158px;
+        width: 150px;
+        margin: 10px;
     }
 	.competition-card {
-        width: 158px;
-        height: 160px;
+        width: 150px;
+        height: 150px;
         .icon {
             margin-top: 20px;
             img {
-                max-width: 4.5rem;
+                max-width: 4rem;
             }
         }
         .title {
