--- a/src/pages/competitions/competition-popup/index.scss
+++ b/src/pages/competitions/competition-popup/index.scss
@@ -133,8 +133,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      text-decoration: none;
     }
     .event-register-button {
+      
       background-color: transparent;
       color: white;
       margin: 0 2rem;
