--- a/src/pages/competitions/competitions-grid/index.scss
+++ b/src/pages/competitions/competitions-grid/index.scss
@@ -4,9 +4,13 @@
 .competition-grid {
   position: relative;
   z-index: 101;
-  padding: 0 6vw;
-  padding-bottom: 70px;
-
+  @include desktop-view{
+    padding: 0 6vw;
+    padding-bottom: 70px;
+  }
+  @include mobile-view {
+    // margin: 0 20px !important;
+  }
   .sort-filter-box {
     display: grid;
     grid-template-columns: auto auto;
@@ -16,7 +20,7 @@
     margin-left: 40px;
 
     @include tablet-view {
-      margin-left: 0px;
+      // margin-left: 0px;
       font-size: 0.75rem;
       display: flex;
       justify-content: center;
@@ -26,6 +30,7 @@
       // grid-template-rows: auto;
       // justify-content: space-between;
       // gap: 0.6rem;
+      
       margin-left: 0px;
       font-size: 0.75rem;
       display: flex;
@@ -82,9 +87,16 @@
     padding: 1.5rem 0;
 
     @include mobile-view {
-      grid-template-columns: repeat(1, 1fr);
       padding: 20px 0px;
-      margin-left: 15px;
+      // margin-left: 15px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      // padding: 0 20px;
+      // &::after {
+      //   content: "";
+      //   flex: auto;
+      // }
     }
 
     @include tablet-view {
@@ -229,6 +241,6 @@
   }
 	.competition-cards-container {
     grid-template-columns: repeat(2, 1fr) !important;
-    gap: 1.25rem 0rem !important;
+    gap: 0rem!important;
   }
 }
